Fixed align content problem

--- a/styles.css
+++ b/styles.css
@@ -173,35 +173,35 @@ body{
     display:flex;
     flex-wrap: wrap;
     max-width:1300px auto;
-    height:500px;
+    height: auto;
     justify-content: center;
     border-top:1px solid black;
     border-bottom: 1px solid black;
-    
-    
-
+}
+.trending .trending-card{
+    width: auto;
+    height: 100px;
+    display: inline-flex;
+    flex-direction: row;
+    margin: 10px;
 }
 
-.trending .number-article{
+.trending .trending-card .number-article{
     font-size:40px;
     color:#e6e6e6;
-    margin-top:50px;
-    margin-left:70px;
+    height: auto;
 }
 
-.trending .card{
+.trending .trending-card .card{
     width:300px;
     height:100px;
-    margin:50px;
-    line-height:17px;
-    
 }
 
-.trending .card h5{
+.trending .trending-card .card h5{
     font-size:15px;
 }
 
-.trending .card a{
+.trending .trending-card .card a{
     text-decoration:none;
     font-size:20px;
     font-weight:bold;
